--- a/zadanie2/index.html
+++ b/zadanie2/index.html
@@ -12,7 +12,14 @@
         <label>Search</label>
         <input type="text" id="inputSearch" placeholder="Type Your search here..."/>
     </div>
-    <div id="todoListView"></div>
+    <table id="todoListView">
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Place</th>
+            <th>Due date</th>
+        </tr>
+    </table>
     <form>
         <label>Title</label>
         <input type="text" id="inputTitle"/>
