--- a/zadanie2/index.html
+++ b/zadanie2/index.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="theme.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
     <title>MyTODO App</title>
 </head>
 <body>
-    <h1>MyNotes</h1>
-    <div>
+    <nav class="navbar-nav alert alert-primary">
+        <h1>MyNotes</h1>
+    </nav>
+    <div class="input-group">
         <label>Search</label>
         <input type="text" id="inputSearch" placeholder="Type Your search here..."/>
     </div>
-    <form>
-        <label>Title</label>
-        <input type="text" id="inputTitle"/>
-        <label>Description</label>
-        <input type="text" id="inputDescription"/>
-        <label>Place</label>
-        <input type="text" id="inputPlace"/>
-        <label>Due date</label>
-        <input type="date" id="inputDate"/>
-        <input type="button" value="add" onclick="addTodo()"/>
+    <form>  
+        <div class="row form-group">
+            <label class="form-control-lg offset-4 col-2">Title</label>
+            <input type="text" class="form-control-lg col-2" id="inputTitle" placeholder="New Todo"/>
+        </div>
+        <div class="row form-group">
+            <label class="form-control-lg offset-4 col-2">Description</label>
+            <input type="text" class="form-control-lg col-2" id="inputDescription"/>
+        </div>
+        <div class="row form-group">
+            <label class="form-control-lg offset-4 col-2">Place</label>
+            <input type="text" class="form-control-lg col-2" id="inputPlace"/>
+        </div>
+        <div class="row form-group">
+            <label class="form-control-lg offset-4 col-2">Due date</label>
+            <input type="date" class="form-control-lg col-2" id="inputDate"/>
+        </div>
+        <div class="row form-group">
+            <input type="button" class="btn btn-primary offset-6" value="ADD" onclick="addTodo()"/>
+        </div>
     </form>
-    <table id="todoListView">
-        <tr>
+    <table class="table table-hover" id="todoListView">
+        <tr class="bg-info">
             <th>Title</th>
             <th>Description</th>
             <th>Place</th>
             <th>Due date</th>
         </tr>
     </table>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
